--- a/src/textview_gui.ui
+++ b/src/textview_gui.ui
@@ -1,127 +1,236 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ui version="4.0" stdsetdef="1">
-  <author></author>
-  <comment></comment>
-  <exportmacro></exportmacro>
-  <class>TextViewGUI</class>
-  <widget class="QDialog" name="TextViewGUI">
-    <property name="geometry">
-      <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>372</width>
-        <height>411</height>
-      </rect>
-    </property>
-    <property name="windowTitle">
-      <string>Text View</string>
-    </property>
-    <layout class="QVBoxLayout">
-      <property name="margin">
-        <number>11</number>
-      </property>
-      <property name="spacing">
-        <number>6</number>
-      </property>
-      <item>
-        <widget class="QTextEdit" name="textEdit">
-          <property name="minimumSize">
-            <size>
-              <width>350</width>
-              <height>350</height>
-            </size>
+<ui version="4.0">
+ <class>TextViewGUI</class>
+ <widget class="QDialog" name="TextViewGUI">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>565</width>
+    <height>721</height>
+   </rect>
+  </property>
+  <property name="windowTitle">
+   <string>Text View</string>
+  </property>
+  <layout class="QVBoxLayout">
+   <property name="spacing">
+    <number>6</number>
+   </property>
+   <property name="leftMargin">
+    <number>11</number>
+   </property>
+   <property name="topMargin">
+    <number>11</number>
+   </property>
+   <property name="rightMargin">
+    <number>11</number>
+   </property>
+   <property name="bottomMargin">
+    <number>11</number>
+   </property>
+   <item>
+    <layout class="QVBoxLayout" name="verticalLayout_2">
+     <property name="topMargin">
+      <number>0</number>
+     </property>
+     <property name="bottomMargin">
+      <number>0</number>
+     </property>
+     <item>
+      <widget class="QTextEdit" name="textEdit">
+       <property name="minimumSize">
+        <size>
+         <width>350</width>
+         <height>350</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QWidget" name="exportBox" native="true">
+       <layout class="QVBoxLayout" name="verticalLayout_3">
+        <property name="spacing">
+         <number>6</number>
+        </property>
+        <property name="leftMargin">
+         <number>1</number>
+        </property>
+        <property name="topMargin">
+         <number>1</number>
+        </property>
+        <property name="rightMargin">
+         <number>1</number>
+        </property>
+        <property name="bottomMargin">
+         <number>1</number>
+        </property>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout">
+          <property name="leftMargin">
+           <number>0</number>
           </property>
-        </widget>
-      </item>
-      <item>
-        <layout class="QHBoxLayout">
-          <property name="margin">
-            <number>0</number>
-          </property>
-          <property name="spacing">
-            <number>6</number>
+          <property name="rightMargin">
+           <number>0</number>
           </property>
           <item>
-            <spacer name="Horizontal Spacing2">
-              <property name="sizeHint">
-                <size>
-                  <width>20</width>
-                  <height>20</height>
-                </size>
-              </property>
-              <property name="sizeType">
-                <enum>QSizePolicy::Expanding</enum>
-              </property>
-              <property name="orientation">
-                <enum>Qt::Horizontal</enum>
-              </property>
-            </spacer>
+           <spacer name="Horizontal Spacing3">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeType">
+             <enum>QSizePolicy::Expanding</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
           </item>
           <item>
-            <widget class="QPushButton" name="buttonToClip">
-              <property name="text">
-                <string>&amp;To clipboard</string>
-              </property>
-              <property name="toolTip">
-                <string>Copy position to clipboard</string>
-              </property>
-            </widget>
+           <widget class="QPushButton" name="buttonToClip">
+            <property name="toolTip">
+             <string>Copy position to clipboard</string>
+            </property>
+            <property name="text">
+             <string>&amp;To clipboard</string>
+            </property>
+           </widget>
           </item>
           <item>
-            <widget class="QPushButton" name="buttonSave">
-              <property name="text">
-                <string>&amp;Save</string>
-              </property>
-              <property name="toolTip">
-                <string>Save position to file</string>
-              </property>
-            </widget>
+           <widget class="QPushButton" name="buttonSave">
+            <property name="toolTip">
+             <string>Save position to file</string>
+            </property>
+            <property name="text">
+             <string>&amp;Save</string>
+            </property>
+           </widget>
           </item>
           <item>
-            <widget class="QPushButton" name="buttonClose">
-              <property name="text">
-                <string>&amp;Close</string>
-              </property>
-              <property name="autoDefault">
-                <bool>true</bool>
-              </property>
-              <property name="default">
-                <bool>true</bool>
-              </property>
-              <property name="toolTip">
-                <string>Close this window</string>
-              </property>
-            </widget>
+           <widget class="QPushButton" name="buttonClose">
+            <property name="toolTip">
+             <string>Close this window</string>
+            </property>
+            <property name="text">
+             <string>&amp;Close</string>
+            </property>
+            <property name="autoDefault">
+             <bool>true</bool>
+            </property>
+            <property name="default">
+             <bool>true</bool>
+            </property>
+           </widget>
           </item>
-        </layout>
-      </item>
+         </layout>
+        </item>
+       </layout>
+      </widget>
+     </item>
+     <item>
+      <widget class="QWidget" name="gtpBox" native="true">
+       <layout class="QHBoxLayout" name="gtpLayout">
+        <property name="spacing">
+         <number>6</number>
+        </property>
+        <property name="leftMargin">
+         <number>1</number>
+        </property>
+        <property name="topMargin">
+         <number>1</number>
+        </property>
+        <property name="rightMargin">
+         <number>1</number>
+        </property>
+        <property name="bottomMargin">
+         <number>1</number>
+        </property>
+        <item>
+         <spacer name="Horizontal Spacing2">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Expanding</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QPushButton" name="buttonAbort">
+          <property name="toolTip">
+           <string>Abort program startup</string>
+          </property>
+          <property name="text">
+           <string>&amp;Abort</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+     </item>
     </layout>
-  </widget>
-  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
-  <tabstops>
-    <tabstop>textEdit</tabstop>
-    <tabstop>buttonToClip</tabstop>
-    <tabstop>buttonSave</tabstop>
-    <tabstop>buttonClose</tabstop>
-  </tabstops>
-  <connections>
-    <connection>
-      <sender>buttonClose</sender>
-      <signal>clicked()</signal>
-      <receiver>TextViewGUI</receiver>
-      <slot>accept()</slot>
-    </connection>
-    <connection>
-      <sender>buttonSave</sender>
-      <signal>clicked()</signal>
-      <receiver>TextViewGUI</receiver>
-      <slot>saveMe()</slot>
-    </connection>
-    <connection>
-      <sender>buttonToClip</sender>
-      <signal>clicked()</signal>
-      <receiver>TextViewGUI</receiver>
-      <slot>toClipboard()</slot>
-    </connection>
-  </connections>
+   </item>
+  </layout>
+ </widget>
+ <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+ <resources/>
+ <connections>
+  <connection>
+   <sender>buttonClose</sender>
+   <signal>clicked()</signal>
+   <receiver>TextViewGUI</receiver>
+   <slot>accept()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonSave</sender>
+   <signal>clicked()</signal>
+   <receiver>TextViewGUI</receiver>
+   <slot>saveMe()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonToClip</sender>
+   <signal>clicked()</signal>
+   <receiver>TextViewGUI</receiver>
+   <slot>toClipboard()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
