--- a/src/clientwindow_gui.ui
+++ b/src/clientwindow_gui.ui
@@ -49,7 +49,7 @@
               <property name="orientation">
                 <enum>Qt::Vertical</enum>
               </property>
-              <widget class="Q3GroupBox" name="groupBox1">
+              <widget class="QGroupBox" name="groupBox1">
                 <property name="sizePolicy">
                   <sizepolicy>
                     <hsizetype>7</hsizetype>
@@ -57,9 +57,6 @@
                     <horstretch>0</horstretch>
                     <verstretch>0</verstretch>
                   </sizepolicy>
-                </property>
-                <property name="frameShadow">
-                  <enum>Q3GroupBox::Sunken</enum>
                 </property>
                 <property name="title">
                   <string>Players</string>
