--- a/src/q4go.qrc
+++ b/src/q4go.qrc
@@ -30,8 +30,33 @@
     <file>images/preferences/image1.png</file>
   </qresource>
   <qresource prefix="/ClientWindowGui">
+    <file>images/clientwindow/Bowl.png</file>
+    <file>images/clientwindow/computerplay.png</file>
+    <file>images/clientwindow/connected.png</file>
+    <file>images/clientwindow/disconnected.png</file>
+    <file>images/clientwindow/looking.png</file>
+    <file>images/clientwindow/new_board.png</file>
+    <file>images/clientwindow/not_looking.png</file>
+    <file>images/clientwindow/not_open.png</file>
+    <file>images/clientwindow/not_quiet.png</file>
+    <file>images/clientwindow/not_seeking.png</file>
+    <file>images/clientwindow/open.png</file>
+    <file>images/clientwindow/prefs.png</file>
+    <file>images/clientwindow/qgo.png</file>
+    <file>images/clientwindow/quiet.png</file>
+    <file>images/clientwindow/seeking0.png</file>
+    <file>images/clientwindow/seeking1.png</file>
+    <file>images/clientwindow/seeking2.png</file>
+    <file>images/clientwindow/seeking3.png</file>
+    <file>images/clientwindow/computerplay.png</file>
+    <file>images/clientwindow/filenew.png</file>
+    <file>images/clientwindow/fileopen.png</file>
     <file>images/clientwindow/image0.png</file>
     <file>images/clientwindow/image1.xpm</file>
+    <file>images/clientwindow/image2.png</file>
+    <file>images/clientwindow/not_seeking.png</file>
+    <file>images/clientwindow/refresh_games.png</file>
+    <file>images/clientwindow/refresh_players.png</file>
     <file>images/clientwindow/image2.png</file>
   </qresource>
 </RCC>
